--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>I am a Computer Science Engineer transitioning into a Finance professional while pursuing my CFA. My career began at a boutique management consulting firm, where I gained valuable experience analyzing startups and creating roadmaps for companies in their embryonic stages.</p>
+                        <p>I am an FRM part 1 Candidate and succesfully cleared all the three levels of CFA in the first attempt. My career began at a boutique management consulting firm, where I gained valuable experience analyzing startups and creating roadmaps for companies in their embryonic stages.</p>
                         <p>In addition to my consulting work, I am an active investor in the Indian stock markets, with experience trading stocks, options, and cryptocurrency futures. I am also an aviation enthusiast, deeply passionate about aircraft.</p>
                         <p>In 2021, I served as the Vice President of Seva and Sahayog (Mulund) NGO, where I successfully organized various food, utensil, and clothing distribution drives.</p>
                     </div>
