--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
                             <h1>Dhawal Shah</h1>
-                            <span class="subheading">Finance & Investments</span>
+                            <span class="subheading">CFA L3 Cleared | FRM P1 Candidate | Finance & Investments</span>
                         </div>
                     </div>
                 </div>
